--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,24 +1,7 @@
-FROM quay.io/keycloak/keycloak:11.0.3
-
+FROM registry.access.redhat.com/ubi8/ubi
 USER root
-
-EXPOSE 8080
-EXPOSE 9990
-
-ARG CONT_DIR
-ARG HOST_CFG_DIR
-ARG HOST_DIR
-ARG SYS_DIR
-
-RUN echo CONT_DIR is ${CONT_DIR}
-RUN echo HOST_CFG_DIR is ${HOST_CFG_DIR}
-RUN echo HOST_DIR is ${HOST_DIR}
-RUN echo SYS_DIR is ${SYS_DIR}
-RUN echo USER is ${USER}
-
-RUN mkdir -p $CONT_DIR
-WORKDIR ${CONT_DIR}
-
-#RUN mkdir /etc/nginx/available_sites
-#COPY ${SYS_DIR}/keycloak/realm-export.json ${CONT_DIR}/standalone/
-
+LABEL maintainer="John Doe"
+# Disable RHSM
+RUN sed -i -e  's/^\(enabled\).*/\1=0/g' /etc/yum/pluginconf.d/subscription-manager.conf
+# Start bash
+ENTRYPOINT ["/usr/bin/bash"]
