--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,7 +1,3 @@
-FROM registry.access.redhat.com/ubi8/ubi
+FROM rhel8/support-tools
 USER root
-LABEL maintainer="John Doe"
-# Disable RHSM
-RUN sed -i -e  's/^\(enabled\).*/\1=0/g' /etc/yum/pluginconf.d/subscription-manager.conf
-# Start bash
 ENTRYPOINT ["/usr/bin/bash"]
