--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,3 +1,7 @@
-FROM rhel8/support-tools
+FROM registry.redhat.io/ubi8/ubi
 USER root
+LABEL maintainer="John Doe"
+# Disable RHSM
+RUN sed -i -e  's/^\(enabled\).*/\1=0/g' /etc/yum/pluginconf.d/subscription-manager.conf
+# Start bash
 ENTRYPOINT ["/usr/bin/bash"]
